completed quotes API and fetched in UI

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#confession">Confession Box</a></li>
-        <li><a href="#typing-test">Typing Test</a></li>
+        <li><a href="#confession">Want us to know your story?</a></li>
         <li><a href="#analytics">Your Progress Analytics</a></li>
       </ul>
     </nav>
@@ -30,12 +29,13 @@
   <main>
     <div class="message">
       <textarea placeholder="Start writing your blog or message here..."></textarea>
-      <button class="button">Click Me</button>
+      <button class="button">Done</button>
     </div>
     <div class="container">
       <div class="randombox" id="randomText">
         <p id="quote">Loading....</p>
-        <span id="current-date">Loading date...</span>
+        <br>
+        <p id="author">Loading....</p>
       </div>
       <div class="agent">
         <div id="chat-box" class="chat-box"></div>
@@ -48,10 +48,8 @@
   </main>
 
   <footer>
-    <p>&copy; subhajit.baidya — All rights reserved</p>
+    <p>You can be yourself here!</p>
   </footer>
-
-
   <script src="app.js"></script>
 </body>
 
